Add new page to sidebar

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -26,12 +26,15 @@
     "REST api example": "REST api example",
     "subqueries": "Subqueries",
     "Subqueries": "Subqueries",
+    "the-new-api": "New Stuff",
+    "The New API": "The New API",
     "what-are-fragments": "What Are Fragments?",
     "What Are Fragments?": "What Are Fragments?",
     "Docs": "Docs",
     "API": "API",
     "Help": "Help",
     "Blog": "Blog",
+    "A CHALLENGER APPEARS": "A CHALLENGER APPEARS",
     "Getting Started": "Getting Started",
     "Introduction": "Introduction",
     "Writing Queries": "Writing Queries",
