--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,36 +4,22 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "A next-generation query builder for node.js",
-    "api-reference": "API",
-    "API Reference": "API Reference",
-    "authorization": "Authorization",
-    "Writing Authorization Logic": "Writing Authorization Logic",
-    "conditional-fragments": "Conditionally Including Fragments",
-    "Conditional Fragments": "Conditional Fragments",
-    "embedding": "Embedding in existing SQL",
-    "Embedding in existing SQL": "Embedding in existing SQL",
+    "arg": "arg",
+    "execute": "execute",
+    "fragment": "fragment",
+    "help": "Getting Help",
+    "Help": "Help",
     "installation": "Installation",
-    "Installation": "Installation",
-    "overridable-fragments": "Overridable Fragments",
-    "Overridable Fragments": "Overridable Fragments",
-    "pagination": "Pagination Fragments",
-    "Pagination": "Pagination",
-    "select-statements": "Basic Query Building",
-    "Query Building": "Query Building",
-    "sql-from-qp": "Generating SQL from HTTP Query Params",
-    "REST api example": "REST api example",
-    "subqueries": "Subqueries",
-    "Subqueries": "Subqueries",
+    "Getting started": "Getting started",
+    "subqueries": "subqueries",
     "the-new-api": "New Stuff",
     "The New API": "The New API",
-    "what-are-fragments": "What Are Fragments?",
-    "What Are Fragments?": "What Are Fragments?",
+    "where": "where",
     "Docs": "Docs",
-    "API": "API",
-    "Help": "Help",
     "Blog": "Blog",
     "A CHALLENGER APPEARS": "A CHALLENGER APPEARS",
-    "Getting Started": "Getting Started"
+    "Getting Started": "Getting Started",
+    "Fragments": "Fragments"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
